changed translation for keybind popup, changed layout for graphics

--- a/addons/GameTemplate/Localization/Localization.csv
+++ b/addons/GameTemplate/Localization/Localization.csv
@@ -42,7 +42,7 @@ ACTIONS,Actions,Acciones
 KEYBOARD,Keyboard,Teclado
 GAMEPAD,Gamepad,Gamepad
 DEFAULT,Default,Defecto
-USE_NEW_CONTROLS,Use new control!,Usar nuevos controles!
+USE_NEW_CONTROLS,Press the key you want to add,Presione la tecla que desea agregar
 CANCEL,Cancel,Cancelar
 LANGUAGES,Languages,Idiomas
 BY,by,por
