moved silent wolf config out of game.gd, made settings tab titles be translated automatically

--- a/addons/GameTemplate/Localization/Localization.csv
+++ b/addons/GameTemplate/Localization/Localization.csv
@@ -17,6 +17,7 @@ WELCOME,Welcome,Bienvenid@
 OPTIONS,Options,Opciones
 CREDITS,Credits,Créditos
 GAME,Game,Juego
+GRAPHICS,Graphics,Gráficos
 MAIN_MENU,Main Menu,Menú principal
 BACK,Back,Atras
 EXIT,Exit,Salir
