separated audio settings into its own script, adjusted game settings ui

--- a/addons/GameTemplate/Localization/Localization.csv
+++ b/addons/GameTemplate/Localization/Localization.csv
@@ -31,7 +31,7 @@ FULLSCREEN,Fullscreen window,Pantalla completa
 BORDERLESS,Borderless window,Pantalla sin bordes
 SCALE,Scale,Escalado
 VOLUME,Volume,Volumen
-MASTER,Master,General
+MAIN,Main,Principal
 MUSIC,Music,Música
 SFX,Sounds,Efectos de Sonido
 CONTROLS,Controls,Controles
