add game options properly and make it use an enum for difficulty values

--- a/addons/GameTemplate/Localization/Localization.csv
+++ b/addons/GameTemplate/Localization/Localization.csv
@@ -62,3 +62,4 @@ SUBMIT,Submit,Enviar
 SIGN UP,Sign Up,Registrarse
 LOADING_SCORES,Loading scores…,Cargando puntuaciones…
 NO_SCORES_YET,No scores yet!,Sin puntuaciones por el momento
+INSANE,Insane,Loco
